--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-jwt": "^5.3.1",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.14",
     "mongoose-data-seed": "^1.0.7",
     "morgan": "~1.9.0"
